<resources>
    <string name="app_name">What2Eat</string>
    <string name="goto_calendar">View Calendar</string>
    <string name="generate_meals">Generate Meals</string>
    <string name="generation_options">Meal Generator Preferences</string>
    <string name="calendar_intake_text">Enter Daily Caloric Intake</string>
    <string name="goto_custom_meal_editor">View and Edit Custom Meals</string>
    <string name="meal_editor_list_thumbnail">ImageIcon</string>
    <string name="meal_editor_list_view_meal">View</string>
    <string name="meal_editor_list_edit_meal">Edit</string>
    <string name="meal_editor_generate_switch">Generate</string>
    <string name="meal_editor_list_delete_meal">Delete</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="meal_viewer_fragment_name">Name</string>
    <string name="meal_viewer_fragment_ingredient_header">Ingredients</string>
    <string name="meal_viewer_fragment_ingredient_list">ingredients list</string>
    <string name="meal_viewer_fragment_recipe_header">Recipe</string>
    <string name="meal_viewer_fragment_recipe_list">recipe list</string>
    <string name="meal_viewer_fragment_allergies_header">Allergies</string>
    <string name="meal_viewer_fragment_allergies_list">allergies list</string>
    <string name="meal_viewer_fragment_calories_header">Calories</string>
    <string name="meal_viewer_fragment_calories_list">calories list</string>
    <string name="calendar_fragment_diets_header">Dietary Preferences</string>
    <string name="no_meals_generated">No Meals Generated</string>
    <string name="no_meals_created">No Meals Created</string>
</resources>
