<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.design.senior.what2eat.Fragments.MealViewerFragment">

    <RelativeLayout
        android:id="@+id/meal_viewer_scrollview_layout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/meal_viewer_name"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:text="@string/meal_viewer_fragment_name"/>

        <ImageView
            android:id="@+id/meal_viewer_image"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/meal_viewer_name"
            android:layout_marginTop="6dp"
            tools:src="@mipmap/ic_launcher"
            android:contentDescription="@string/thumbnail"/>

        <TextView
            android:id="@+id/meal_viewer_ingredients_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/meal_viewer_image"
            android:textSize="24sp"
            android:layout_marginTop="6dp"
            android:text="@string/meal_viewer_fragment_ingredient_header"/>

        <TextView
            android:id="@+id/meal_viewer_ingredients_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/meal_viewer_ingredients_header"
            android:textSize="18sp"
            android:layout_marginTop="6dp"
            android:text="@string/meal_viewer_fragment_ingredient_list"/>

        <TextView
            android:id="@+id/meal_viewer_recipe_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/meal_viewer_ingredients_content"
            android:textSize="24sp"
            android:layout_marginTop="6dp"
            android:text="@string/meal_viewer_fragment_recipe_header"/>

        <TextView
            android:id="@+id/meal_viewer_recipe_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/meal_viewer_recipe_header"
            android:textSize="18sp"
            android:layout_marginTop="6dp"
            android:text="@string/meal_viewer_fragment_recipe_list"/>

        <TextView
            android:id="@+id/meal_viewer_allergies_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/meal_viewer_recipe_content"
            android:textSize="24sp"
            android:layout_marginTop="6dp"
            android:text="@string/meal_viewer_fragment_allergies_header"/>

        <TextView
            android:id="@+id/meal_viewer_allergies_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/meal_viewer_allergies_header"
            android:textSize="18sp"
            android:layout_marginTop="6dp"
            android:text="@string/meal_viewer_fragment_allergies_list"/>

        <TextView
            android:id="@+id/meal_viewer_calories_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/meal_viewer_allergies_content"
            android:textSize="24sp"
            android:layout_marginTop="6dp"
            android:text="@string/meal_viewer_fragment_calories_header"/>

        <TextView
            android:id="@+id/meal_viewer_calories_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/meal_viewer_calories_header"
            android:textSize="18sp"
            android:layout_marginTop="6dp"
            android:text="@string/meal_viewer_fragment_calories_list"/>
    </RelativeLayout>
</ScrollView>
